--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
+//************
 MID=ynNLYz93532484922298
 PAYTM_MERCHANT_KEY=i44XS#M_AR9DF&t8
+WEBSITE=WEBSTAGING
+CHANNEL_ID=WEB
+INDUSTRY_TYPE_ID=Retail
+PAYTM_FINAL_URL=https://securegw-stage.paytm.in/theia/processTransaction
+CALLBACK_URL=https://payment.nutandigitalmart.com/paywithpaytmresponse
+PORT=3012*********///
+
+--------------------------------------------------------------------------------------
+
+MID= KWkYwC22241162990459 
+PAYTM_MERCHANT_KEY= 20OIIDpXFufNevov 
 WEBSITE=WEBSTAGING
 CHANNEL_ID=WEB
 INDUSTRY_TYPE_ID=Retail
